--- a/src/index.css
+++ b/src/index.css
@@ -21,3 +21,39 @@ body {
     font-weight: normal;
     text-shadow: 3px 3px 0 rgba(13, 24, 28, 0.2);
 }
+
+/* Search */
+.search {
+    text-align: center;
+    max-width: 500px;
+    margin: 20px auto;
+    display: flex;
+}
+
+.search input {
+    flex-grow: 1;
+    background-color: #fff;
+    border: 0;
+    padding: 20px;
+    font-size: 20px;
+}
+
+.search button {
+    background-color: #e13e45;
+    color: #fff;
+    text-transform: uppercase;
+    border: 0;
+    font-size: 20px;
+    padding: 20px;
+    cursor: pointer;
+}
+
+.search button:disabled {
+    opacity: 0.5;
+}
+
+@media (max-width: 768px) {
+    .header h1 {
+        font-size: 50px;
+    }
+}
