--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: 'Inter', sans-serif;
     background-color: #ffc425;
@@ -52,8 +56,49 @@ body {
     opacity: 0.5;
 }
 
+/* Beer listing */
+.results {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+/* Beer card */
+.beer {
+    background-color: #fff;
+    padding: 10px;
+    border-top: 15px solid #e13e45;
+    width: 260px;
+    margin: 20px;
+    box-shadow: 0 0 10px rgba(13, 24, 28, 0.2);
+    transition: 0.2s;
+}
+
+.beer:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 20px 2px rgba(13, 24, 28, 0.3);
+}
+
+.beer h2 {
+    margin: 0;
+    font-size: 15px;
+    text-align: center;
+    margin-bottom: 20px;
+    font-weight: bold;
+}
+
+.beer img {
+    height: 250px;
+    display: block;
+    margin: auto;
+}
+
 @media (max-width: 768px) {
     .header h1 {
         font-size: 50px;
+    }
+
+    .beer {
+        width: 100%;
     }
 }
