Fix font input button

--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,10 @@ body {
     background-attachment: fixed;
 }
 
+input, button {
+    font-family: inherit;
+}
+
 .container {
     max-width: 900px;
     margin: auto;
