--- a/src/index.css
+++ b/src/index.css
@@ -1,108 +1,112 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Inter', sans-serif;
-    background-color: #ffc425;
-    background-image: linear-gradient(to bottom, #ffc425 50%, #eaaa00 100%);
-    background-attachment: fixed;
+  font-family: 'Inter', sans-serif;
+  background-color: #ffc425;
+  background-image: linear-gradient(to bottom, #ffc425 50%, #eaaa00 100%);
+  background-attachment: fixed;
 }
 
 input, button {
-    font-family: inherit;
+  font-family: inherit;
 }
 
 .container {
-    max-width: 900px;
-    margin: auto;
+  max-width: 900px;
+  margin: auto;
 }
 
 /* Header */
 .header h1 {
-    text-align: center;
-    font-family: 'Bevan', cursive;
-    transform: rotate(-5deg) skew(-20deg);
-    color: #0d181c;
-    margin: 20px 0;
-    font-size: 100px;
-    font-weight: normal;
-    text-shadow: 3px 3px 0 rgba(13, 24, 28, 0.2);
+  text-align: center;
+  font-family: 'Bevan', cursive;
+  transform: rotate(-5deg) skew(-20deg);
+  color: #0d181c;
+  margin: 20px 0;
+  font-size: 100px;
+  font-weight: normal;
+  text-shadow: 3px 3px 0 rgba(13, 24, 28, 0.2);
 }
 
 /* Search */
 .search {
-    text-align: center;
-    max-width: 500px;
-    margin: 20px auto;
-    display: flex;
+  text-align: center;
+  max-width: 500px;
+  margin: 20px auto;
+  display: flex;
 }
 
 .search input {
-    flex-grow: 1;
-    background-color: #fff;
-    border: 0;
-    padding: 20px;
-    font-size: 20px;
+  flex-grow: 1;
+  background-color: #fff;
+  border: 0;
+  padding: 20px;
+  font-size: 20px;
+}
+
+.search input:focus {
+  outline-color: #e13e45;
 }
 
 .search button {
-    background-color: #e13e45;
-    color: #fff;
-    text-transform: uppercase;
-    border: 0;
-    font-size: 20px;
-    padding: 20px;
-    cursor: pointer;
+  background-color: #e13e45;
+  color: #fff;
+  text-transform: uppercase;
+  border: 0;
+  font-size: 20px;
+  padding: 20px;
+  cursor: pointer;
 }
 
 .search button:disabled {
-    opacity: 0.5;
+  opacity: 0.5;
 }
 
 /* Beer listing */
 .list {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
 }
 
 /* Beer card */
 .beer {
-    background-color: #fff;
-    padding: 10px;
-    border-top: 15px solid #e13e45;
-    width: 260px;
-    margin: 20px;
-    box-shadow: 0 0 10px rgba(13, 24, 28, 0.2);
-    transition: 0.2s;
+  background-color: #fff;
+  padding: 10px;
+  border-top: 15px solid #e13e45;
+  width: 260px;
+  margin: 20px;
+  box-shadow: 0 0 10px rgba(13, 24, 28, 0.2);
+  transition: 0.2s;
 }
 
 .beer:hover {
-    transform: scale(1.05);
-    box-shadow: 0 0 20px 2px rgba(13, 24, 28, 0.3);
+  transform: scale(1.05);
+  box-shadow: 0 0 20px 2px rgba(13, 24, 28, 0.3);
 }
 
 .beer h2 {
-    margin: 0;
-    font-size: 15px;
-    text-align: center;
-    margin-bottom: 20px;
-    font-weight: bold;
+  margin: 0;
+  font-size: 15px;
+  text-align: center;
+  margin-bottom: 20px;
+  font-weight: bold;
 }
 
 .beer img {
-    height: 250px;
-    display: block;
-    margin: auto;
+  height: 250px;
+  display: block;
+  margin: auto;
 }
 
 @media (max-width: 768px) {
-    .header h1 {
-        font-size: 50px;
-    }
+  .header h1 {
+    font-size: 50px;
+  }
 
-    .beer {
-        width: 100%;
-    }
+  .beer {
+    width: 100%;
+  }
 }
