--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,12 @@ input, button {
   margin: auto;
 }
 
+/* Loader */
+.loader {
+  text-align: center;
+  font-size: 30px;
+}
+
 @media (max-width: 768px) {
   .header h1 {
     font-size: 50px;
