Show single beer

--- a/src/index.css
+++ b/src/index.css
@@ -9,8 +9,18 @@ body {
   background-attachment: fixed;
 }
 
+p, li {
+  font-size: 18px;
+  line-height: 1.5em;
+}
+
 input, button {
   font-family: inherit;
+}
+
+a {
+  text-decoration: none;
+  color: #0d181c;
 }
 
 .container {
@@ -107,12 +117,109 @@ input, button {
   font-size: 30px;
 }
 
+/* Single */
+.single {
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(13, 24, 28, 0.2);
+  border-top: 15px solid #e13e45;
+  padding: 20px;
+  margin: 0 auto 100px;
+  max-width: 800px;
+  box-sizing: border-box;
+}
+
+.single .flex {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.single .label {
+  width: 30%;
+}
+
+.single .desc {
+  width: 70%;
+}
+
+.single img {
+  max-width: 100%;
+  height: 250px;
+  object-fit: cover;
+  display: block;
+  margin: auto;
+}
+
+.single h2 {
+  font-size: 30px;
+}
+
+.single h3 {
+  font-size: 20px;
+}
+
+.deets {
+  display: flex;
+  justify-content: space-between;
+}
+
+.glass {
+  text-align: center;
+}
+
+.glass img {
+  width: 200px;
+}
+
+.abv {
+  font-size: 20px;
+  margin-top: 20px;
+}
+
+.ibu .circle {
+  border-radius: 50%;
+  background-color: lightgray;
+  width: 25px;
+  height: 25px;
+  display: inline-block;
+  margin-right: 5px;
+}
+
+.ibu .circle.active {
+  background-color: #ffc425;
+}
+
+.order-container {
+  text-align: center;
+}
+
+.order {
+  background-color: #e13e45;
+  color: #fff;
+  cursor: pointer;
+  padding: 20px;
+  text-transform: uppercase;
+  font-size: 20px;
+  border: 0;
+}
+
 @media (max-width: 768px) {
   .header h1 {
     font-size: 50px;
   }
 
   .beer {
+    width: 100%;
+  }
+
+  .deets {
+    flex-wrap: wrap;
+  }
+
+  .ibu {
+    text-align: center;
+  }
+
+  .glass {
     width: 100%;
   }
 }
